[package]
name = "termbook"
version = "0.0.1"
authors = ["Artem Shinkarov <artyom.shinkaroff@gmail.com>"]
edition = "2018"

[dependencies]
hyphenation = { version = "0.7.1", features = ["embed_all"] }
# textwrap = { version = "0.11", features = ["hyphenation", "term_size"] }
quick-xml = "0.12.0"
ansi_term = "0.11"
