[package]
name = "termbook"
version = "0.0.1"
authors = ["Artem Shinkarov <artyom.shinkaroff@gmail.com>"]
edition = "2018"

[dependencies]
hyphenation = { version = "0.8", features = ["embed_all"] }
# textwrap = { version = "0.11", features = ["hyphenation", "term_size"] }
quick-xml = "~0.18"
#ansi_term = "0.11"
termion = "1.5"
clap = "~2.33"
anyhow = "~1"
# yaml-rust = "~0.4"
serde = "~1"
serde_yaml = "~0.8"
